@@ -479,13 +479,13 @@ make
       <title>Integration with version control systems</title>
 
       <para>
-        (FIXME)
+        As a rule of the thum, its those files you edit, that should go under 
+        version control. For typical projects its these files:
+        <filename>&lt;package&gt;.types</filename>
+        <filename>&lt;package&gt;-docs.sgml</filename>
+        <filename>&lt;package&gt;-sections.txt</filename>
+        <filename>Makefile.am</filename>
       </para>
-
-      <para>
-        (which files belong into a vcs (like cvs, svn))
-      </para>
-      
     </sect1>
     
   </chapter>
@@ -576,6 +576,16 @@ make
             <para>
               Use #symbol to refer to other types of symbol, e.g. structs and
               enums and macros which don't take arguments.
+            </para>
+          </listitem>
+          <listitem>
+            <para>
+              Use Object::signal to refer to a GObject signal
+            </para>
+          </listitem>
+          <listitem>
+            <para>
+              Use Object:property to refer to a GObject property
             </para>
           </listitem>
         </itemizedlist>
@@ -951,7 +961,7 @@ make
         <informalexample>
           <programlisting>
 <![CDATA[
-<filename>c:\windows</filename>
+<filename>/home/user/documents</filename>
 ]]>
           </programlisting>
         </informalexample>
@@ -1155,12 +1165,16 @@ gtk_arrow_get_type
 	<seg>Wrong naming in section file (see <ulink url="http://mail.gnome.org/archives/gtk-doc-list/2003-October/msg00006.html">explanation</ulink>)</seg>
       </seglistitem>
       <seglistitem>
+	<seg>Damn, I have still no class hierarchy.</seg>
+	<seg>Is the object name (name of the instance struct) part of the normal section (don't put this into Standard or Private).</seg>
+      </seglistitem>
+      <seglistitem>
 	<seg>No symbol index.</seg>
 	<seg>FIXME (&lt;index&gt; tag in main sgml file)</seg>
       </seglistitem>
       <seglistitem>
 	<seg>Symbols are not linked to their doc-section.</seg>
-	<seg>FIXME (added #,% or () )</seg>
+	<seg>FIXME (added #,% or () ?)</seg>
       </seglistitem>
       <seglistitem>
 	<seg>A new class does not appear in the docs.</seg>
