@@ -1,3 +1,8 @@
+2006-03-21  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtk-doc-manual.xml:
+	document signal and property link short cuts
+
 2005-12-09  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtk-doc-manual-C.omf.in:
